--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@tanstack/react-query": "^4.14.5",
     "expo": "~46.0.16",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
